Refactor backend to enhance order processing and saga management. Update pom.xml to use Spring Boot 3.3.6 and improve dependency versions for better performance and security. Introduce new SagaExecutionRepositoryPort for saga persistence, replacing JpaSagaExecutionRepository. Modify OrderSagaOrchestrator to utilize the new port and improve error handling with OrderNotFoundException. Enhance OrderController for idempotency key generation and streamline order creation process. Update tests to reflect changes in saga execution and order handling, ensuring comprehensive coverage. Document changes in the changelog for clarity.